RESOLVED FIXED177295
[GTK] Couple of pasteboard related tests are failing after r222228
https://bugs.webkit.org/show_bug.cgi?id=177295
Summary [GTK] Couple of pasteboard related tests are failing after r222228
Miguel Gomez
Reported 2017-09-21 02:14:23 PDT
editing/pasteboard/copy-without-selection.html [ Failure ] editing/pasteboard/pasting-empty-html-falls-back-to-text.html [ Failure ]
Attachments
Patch (3.73 KB, patch)
2017-09-22 06:05 PDT, Ms2ger (he/him; ⌚ UTC+1/+2)
no flags
Ms2ger (he/him; ⌚ UTC+1/+2)
Comment 1 2017-09-21 09:03:20 PDT
I looked at editing/pasteboard/copy-without-selection.html for a bit. So far I've found that DataTransfer::createForCopyAndPaste only creates a StaticPasteboard when mode is StoreMode::ReadWrite; this is the case for the copy event, but not the paste event. I'm not sure how this is supposed to work, given that both events get a different pasteboard.
Ms2ger (he/him; ⌚ UTC+1/+2)
Comment 2 2017-09-22 06:05:48 PDT
Michael Catanzaro
Comment 3 2017-09-22 07:17:12 PDT
Comment on attachment 321536 [details] Patch Good job, thanks! The only thing I'm not sure about is why r222228 caused this regression, but it's clear that not calling writeToClipboard() is bad.
WebKit Commit Bot
Comment 4 2017-09-22 07:45:52 PDT
Comment on attachment 321536 [details] Patch Clearing flags on attachment: 321536 Committed r222387: <http://trac.webkit.org/changeset/222387>
WebKit Commit Bot
Comment 5 2017-09-22 07:45:54 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.