[GTK] Couple of pasteboard related tests are failing after r222228 https://bugs.webkit.org/show_bug.cgi?id=177295

Reviewed by Michael Catanzaro.

Source/WebCore:

Call writeToClipboard() from Pasteboard::writeString() on GTK.

When writePasteboard was replaced by commitToPasteboard in r222228,
the call to writeToClipboard() did not make it into the
platform-neutral code. This attempts to find another place in the
GTK-specific code to make the call.

Tests: editing/pasteboard/copy-without-selection.html
       editing/pasteboard/pasting-empty-html-falls-back-to-text.html

* platform/gtk/PasteboardGtk.cpp:
(WebCore::Pasteboard::writeString):

LayoutTests:

* platform/gtk/TestExpectations: mark the tests as passing again.


Canonical link: https://commits.webkit.org/193687@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222387 268f45cc-cd09-0410-ab3c-d52691b4dbfc